# PythonLawiny

./: .cache.sqlite  .gitignore  __init__.py  adminAccess.py  avalanche_danger.py  avalanche_statistics.py  main.py  models.py  pyproject.toml  routes.py  weather.py  weather_locations.py
flask_routes/: map_routes.py  weather_routes.py  web_and_accounts_routes.py
static/: styles.css
templates/: base.html  index.html  login.html  map.html  mapa.html  profile.html  register.html  weather.html
