[project]
name = "pythonlawiny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "openmeteo-requests>=1.5.0",
    "overpy>=0.7",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "rasterio>=1.4.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scipy>=1.16.0",
]
